Closed Bug 545506 Opened 16 years ago Closed 16 years ago

Fix the custom header/footer dialog in GTK's print dialog

Categories

(Core :: Widget: Gtk, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- .9-fixed

People

(Reporter: ventnor.bugzilla, Assigned: ventnor.bugzilla)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
There are a lot of problems with the custom header/footer prompt we show on GTK's native print dialog. 1) Pressing Enter doesn't confirm the dialog by default. 2) There is a horizontal separator. 3) The dialog isn't actually modal. 3) is the most important, but I'd thought I'd fix up the others since they're one-liners.
Attachment #426334 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment on attachment 426334 [details] [diff] [review] Patch Would like to get this in 1.9.2.x, we have customer complaints about issues 1 and 3 (from the description).
Attachment #426334 - Flags: approval1.9.2.7?
Comment on attachment 426334 [details] [diff] [review] Patch a=LegNeato for 1.9.2.8. Please land this on mozilla-1.9.2 default.
Attachment #426334 - Flags: approval1.9.2.8+
Attachment #426334 - Flags: approval1.9.2.7?
Attachment #426334 - Flags: approval1.9.2.7-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: