Bug 545506 - Fix the custom header/footer dialog in GTK's print dialog r=roc

--HG--
extra : rebase_source : 79f5dc473d9e9812041a76853237aaead86f0e69